Migrate content from fastai

--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,6 @@
 ---
 title: "About"
-image: profile.jpg
+image: posts/images/headshot.jpg
 about:
   template: jolla
   links:
@@ -9,11 +9,19 @@ about:
       href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://linkedin.com/in/tmbeck
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/tmbeck
 
 ---
 
 About this blog
+
+I recieved a degree in Electrical Engineering from [UCSD](https://www.ucsd.edu.) in 2007. I've worked most of my engineering career at Viasat, where I've enjoyed career mobility by being a test engineer, software engineer, and hardware engineer, later becoming a cross-functional leader of an engineering organization comprised of mechanical, hardware (including programmable logic), and software engineers. Much of my careeer has been focused on constructing what would now be considered "well-labeled datasets", as well as web-based analysis tools for computing process capability metrics, supporting root cause analysis, providing insight into product performance, general process automation, etc.
+
+Since learning more about data science and machine learning, I've begun exploring the intersection of ML and manufacturing, particularly how ML can accelerate manufacturing & test processes. I feel passionately that this technology can be used to improve product design by providing greater context and understanding by combining manufacturing, test, and operational datasets.
+
+I first started diving into machine learning myself using the [fast.ai v3 course](https://github.com/fastai/course-v3), but switched to v4 of the course when it was recently released. In Lesson 3 of v4 of the course, [Jeremy recommends](https://youtu.be/5L3Ao5KuCC4?t=3547) to write about what you are learning. Once I saw fastpages[^1], I figured it was time to start writing. They had me once I found out I could convert jupyter notebooks to blog posts!
+
+I created this site to help me document my journey, study, challenge myself, and show off what I've learned.
