--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "blog"
+title: "tbeck.io/blog"
 listing:
   contents: posts
   sort: "date desc"
@@ -10,5 +10,4 @@ listing:
 page-layout: full
 title-block-banner: true
 ---
-
 
